--- a/index.html
+++ b/index.html
@@ -15,115 +15,34 @@
 
   <!--CSS 설정-->
   <link href="css/animation_shadows.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <style>
+    html, body { width: 100%; height:100%; }
+    body {
+      display: flex;
+      justify-content: space-around;
+      align-items: flex-start;
+      flex-wrap: wrap;
+      flex-direction:row;
+    }
+    body > form { width: 49%; height: 49%; }
+    input { width: 100%; height: 100%; border-radius: 10%; border-top: 10px double black; }
+    form:nth-child(1) > input { background: url(image/text_animation.png); background-size: 80% 80%; background-repeat: no-repeat; background-position: 50% 50%; }
+    form:nth-child(2) > input { background: url(image/write.png); background-size: 80% 80%; background-repeat: no-repeat; background-position: 50% 50%; }
+  </style>
   <!--타이틀 설정-->
-  <title>동민의 홈페이지</title>
+  <title>Main 페이지</title>
 
   <!--jquery 최신 설정-->
+  <script type="text/javascript" src="js/readdir.js"></script>
   <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
-    integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
-    integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
-    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="navbar-brand" aria-current="page" href="#">Home</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="/">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/Write">Write</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  <div class="gradients noselect">
-    <svg viewbox="0 0 100 20">
-      <defs>
-        <linearGradient id="gradient" x1="0" x2="0" y1="0" y2="1">
-          <stop offset="5%" stop-color="#326384" />
-          <stop offset="95%" stop-color="#F361DC" />
-        </linearGradient>
-
-        <pattern id="wave" x="0" y="0" width="120" height="20" patternUnits="userSpaceOnUse">
-          <path id="wavePath" d="M-40 9 Q-30 7 -20 9 T0 9 T20 9 T40 9 T60 9 T80 9 T100 9 T120 9 V20 H-40z"
-            fill="url(#gradient)">
-            <animateTransform attributeName="transform" begin="0s" dur="1.5s" type="translate" from="0,0" to="40,0"
-              repeatCount="indefinite" />
-          </path>
-        </pattern>
-      </defs>
-      <text text-anchor="middle" x="50" y="15" font-size="12px" fill="url(#wave)" fill-opacity="0.6">Gradient pattern</text>
-      <text text-anchor="middle" x="50" y="15" font-size="12px" fill="url(#gradient)" fill-opacity="0.1">Gradient pattern</text>
-    </svg>
-  </div>
-  <div class="shadows center noselect">
-    <h1>
-      English<br><span>that seems</span><br><span>to have</span><br><span>something</span>
-    </h1>
-  </div>
-  <div class="movie_animations center noselect">
-    <span>
-      Movie Animation
-    </span>
-  </div>
-
-  <div class="montserrats">
-    <svg viewBox="0 0 960 300">
-      <symbol id="s-text">
-        <text text-anchor="middle" x="50%" y="80%">Montserrat</text>
-      </symbol>
-  
-      <g class = "g-ants">
-        <use xlink:href="#s-text" class="text-copy"></use>
-        <use xlink:href="#s-text" class="text-copy"></use>
-        <use xlink:href="#s-text" class="text-copy"></use>
-        <use xlink:href="#s-text" class="text-copy"></use>
-        <use xlink:href="#s-text" class="text-copy"></use>
-      </g>
-    </svg>
-  </div>
-  <div class="center">
-    <ul class="Words">
-      <li class="Words-line">
-        <p>CSS Only</p>
-      </li>
-      <li class="Words-line">
-        <p>Perspective</p>
-      </li>
-      <li class="Words-line">
-        <p>Text Effect</p>
-      </li>
-      <li class="Words-line">
-        <p>by</p>
-      </li>
-      <li class="Words-line">
-        <p>James</p>
-      </li>
-      <li class="Words-line">
-        <p>Bosworth</p>
-      </li>
-    </ul>
-  </div>
-
-  <div class="happy center">
-    <h1><span>뼈</span><span>햄</span><span>짱</span><span>나</span><span>눈</span><span>짱</span><span>이</span><span>얌</span><span>!</span><span>!</span><span>!</span></h1>
-  </div>
+  <form action="html/text_animation.html"><input type="submit" value=""/></form>
+  <form action="html/Write.html"><input type="submit" value=""/></form>
+  <form action="index2.html"><input type="submit" value=""/></form>
+  <form action="index2.html"><input type="submit" value=""/></form>
 </body>
 </html>
